# UBB-ADS2

./: LICENSE  README.md
Lab1/01/: main.cpp
Lab10/01/: main.cpp
Lab10/02/: CMakeLists.txt  main.cpp
Lab2/01/: CMakeLists.txt  main.cpp
Lab3/01/: CMakeLists.txt  DSU.cpp  DSU.h  main.cpp
Lab4/01/: CMakeLists.txt  ST.cpp  ST.h  main.cpp
Lab7/01/: CMakeLists.txt  main.cpp
Lab7/03/: CMakeLists.txt  main.cpp
Lab9/01/: CMakeLists.txt  main.cpp
Lab9/02/: CMakeLists.txt  main.cpp
felm/02/: CMakeLists.txt  main.cpp
labor/dp/: CMakeLists.txt  main.cpp
labor/greedy_penzautomata/: CMakeLists.txt  main.cpp
labor/permvarcomb/: CMakeLists.txt  main.cpp
parci/01/: CMakeLists.txt  mrim2553.cpp
parci/02/: CMakeLists.txt  mrim2553.cpp
